--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,16 @@
 @import url(owl.theme.default.css);
 @import url(owl.carousel.min.css);
 @import url(owl.theme.default.min.css);
+.reveal {
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: all 2s ease; }
+
+.reveal.active {
+  transform: translateY(0px);
+  opacity: 1; }
+
 * {
   margin: 0;
   padding: 0; }
@@ -17,14 +27,15 @@
     font-size: 14px;
     text-transform: uppercase;
     padding: 14px 35px;
-    transition-duration: 0.3s; }
+    transition: 0.2s linear; }
     .btnsGroup .btn-custom:hover {
       background-color: #008ed600;
       color: #fff;
       border: 1px solid #999999; }
   .btnsGroup .btn-outline-secondary {
     padding: 13px 35px;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    transition: 0.3s linear; }
     .btnsGroup .btn-outline-secondary:hover {
       background-color: #008ed6;
       color: #fff;
@@ -374,14 +385,19 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: baseline; }
-    .eyeCatcher .catcherContent h3 {
-      color: #fff;
-      font-family: "Source Sans Pro-Semibold", sans-serif;
-      font-size: 36px; }
-    .eyeCatcher .catcherContent span {
-      color: #fff;
-      font-family: "Source Sans Pro-Light", sans-serif;
-      font-size: 36px; }
+    .eyeCatcher .catcherContent .catcherText {
+      display: flex;
+      flex-direction: row;
+      align-items: baseline; }
+      .eyeCatcher .catcherContent .catcherText h3 {
+        color: #fff;
+        font-family: "Source Sans Pro-Semibold", sans-serif;
+        font-size: 36px;
+        margin-right: 10px; }
+      .eyeCatcher .catcherContent .catcherText span {
+        color: #fff;
+        font-family: "Source Sans Pro-Light", sans-serif;
+        font-size: 36px; }
     .eyeCatcher .catcherContent .btnsGroup {
       margin-bottom: 0; }
 
@@ -425,7 +441,7 @@ header {
         font-size: 16px;
         color: #008ed6;
         display: inline-block;
-        transition-duration: 0.3s; }
+        transition: 0.3s; }
     .pricingCards .pricingCard ul:hover {
       box-shadow: 0 0.5em 0.5em rgba(0, 0, 0, 0.1);
       transform: translateY(-5px); }
@@ -477,5 +493,106 @@ header {
         top: 0;
         width: 45%;
         height: 100%; }
+
+.stayInTouch {
+  padding: 60px 0;
+  background: #ededed; }
+  .stayInTouch .inTouchHeading {
+    margin-bottom: 60px; }
+    .stayInTouch .inTouchHeading h3 {
+      color: #1a1a1a;
+      font-size: 36px;
+      font-family: "Source Sans Pro-Semibold", sans-serif;
+      margin-bottom: 37px;
+      text-align: center; }
+      .stayInTouch .inTouchHeading h3:before {
+        display: block;
+        content: "Stay In Touch";
+        color: #008ed6;
+        font-size: 14px;
+        font-family: "Source Sans Pro-Bold", sans-serif;
+        text-transform: uppercase;
+        margin-bottom: 25px;
+        margin-top: 60px; }
+    .stayInTouch .inTouchHeading span {
+      width: 42px;
+      display: block;
+      height: 2px;
+      position: relative;
+      margin: auto; }
+      .stayInTouch .inTouchHeading span:after {
+        content: " ";
+        background-color: #008ed6;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 45%;
+        height: 100%; }
+      .stayInTouch .inTouchHeading span:before {
+        content: " ";
+        background-color: #008ed6;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 45%;
+        height: 100%; }
+  .stayInTouch .contactBox {
+    display: flex;
+    flex-direction: column;
+    transition: 0.4s linear; }
+    .stayInTouch .contactBox:hover i {
+      transform: translateY(10px); }
+    .stayInTouch .contactBox i {
+      color: #008ed6;
+      font-size: 32px;
+      text-align: center;
+      margin-bottom: 30px;
+      transition: 0.4s linear; }
+    .stayInTouch .contactBox span {
+      color: #999999;
+      font-family: "Source Sans Pro-Regular", sans-serif;
+      text-align: center; }
+  .stayInTouch .contactForm {
+    background-color: #15141A;
+    padding: 60px 60px 40px;
+    transform: translateY(150px); }
+    .stayInTouch .contactForm form .form-group .form-control {
+      background-color: #fff0;
+      border: 1px solid #808080a3;
+      padding: 22px 20px;
+      resize: none;
+      font-family: "Source Sans Pro-Bold", sans-serif; }
+      .stayInTouch .contactForm form .form-group .form-control::placeholder {
+        text-transform: uppercase; }
+    .stayInTouch .contactForm form textarea {
+      margin-bottom: 21px; }
+    .stayInTouch .contactForm form .btn-primary {
+      padding: 18px 35px;
+      text-transform: uppercase;
+      font-family: "Source Sans Pro-Bold", sans-serif; }
+
+.contactMap .iframeBox iframe {
+  width: 100%;
+  height: 360px; }
+
+footer {
+  padding: 60px 0;
+  background-color: #15141A; }
+  footer .socialsList {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    justify-content: center; }
+    footer .socialsList li a i {
+      margin-right: 30px;
+      font-size: 30px;
+      color: #444348;
+      transition: 0.3s linear; }
+      footer .socialsList li a i:hover {
+        color: #008ed6; }
+  footer span {
+    text-transform: uppercase;
+    color: #444348;
+    text-align: center; }
 
 /*# sourceMappingURL=styles.css.map */
