--- a/css/styles.scss
+++ b/css/styles.scss
@@ -10,6 +10,19 @@ $sspBld: 'Source Sans Pro-Bold', sans-serif;
 $sspReglr: 'Source Sans Pro-Regular', sans-serif;
 $sspItalic: 'Source Sans Pro-Italic', sans-serif;
 $sspThin: 'Source Sans Pro-Light', sans-serif;
+
+.reveal {
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: all 2s ease;
+}
+
+.reveal.active {
+  transform: translateY(0px);
+  opacity: 1;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -26,7 +39,7 @@ $sspThin: 'Source Sans Pro-Light', sans-serif;
     font-size: 14px;
     text-transform: uppercase;
     padding: 14px 35px;
-    transition-duration: 0.3s;
+    transition: 0.2s linear;
 
     &:hover {
       background-color: #008ed600;
@@ -38,6 +51,7 @@ $sspThin: 'Source Sans Pro-Light', sans-serif;
   .btn-outline-secondary {
     padding: 13px 35px;
     text-transform: uppercase;
+    transition: 0.3s linear;
 
     &:hover {
       background-color: #008ed6;
@@ -111,6 +125,7 @@ header {
     }
   }
 }
+
 
 .headerLeftInfo {
   margin-top: 100px;
@@ -525,19 +540,24 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: baseline;
+    .catcherText{
+      display: flex;
+      flex-direction: row;
+      align-items: baseline;
 
-    h3 {
-      color: #fff;
-      font-family: $sspSemibld;
-      font-size: 36px;
+      h3 {
+        color: #fff;
+        font-family: $sspSemibld;
+        font-size: 36px;
+        margin-right: 10px;
+      }
+
+      span {
+        color: #fff;
+        font-family: $sspThin;
+        font-size: 36px;
+      }
     }
-
-    span {
-      color: #fff;
-      font-family: $sspThin;
-      font-size: 36px;
-    }
-
     .btnsGroup {
       margin-bottom: 0;
     }
@@ -572,8 +592,9 @@ header {
             display: block;
             top: 0.5em;
             left: -20px;
-            &.secndDoll, &.thirdDoll, &.frthDoll{
-            left: -29px;
+
+            &.secndDoll, &.thirdDoll, &.frthDoll {
+              left: -29px;
             }
           }
 
@@ -599,7 +620,7 @@ header {
           font-size: 16px;
           color: #008ed6;
           display: inline-block;
-          transition-duration: 0.3s;
+          transition: 0.3s;
         }
       }
 
@@ -676,5 +697,144 @@ header {
         height: 100%;
       }
     }
+  }
+}
+
+.stayInTouch{
+  padding: 60px 0;
+  background: #ededed;
+  .inTouchHeading {
+    margin-bottom: 60px;
+    h3 {
+      color: #1a1a1a;
+      font-size: 36px;
+      font-family: $sspSemibld;
+      margin-bottom: 37px;
+      text-align: center;
+
+      &:before {
+        display: block;
+        content: "Stay In Touch";
+        color: #008ed6;
+        font-size: 14px;
+        font-family: $sspBld;
+        text-transform: uppercase;
+        margin-bottom: 25px;
+        margin-top: 60px;
+      }
+    }
+
+    span {
+      width: 42px;
+      display: block;
+      height: 2px;
+      position: relative;
+      margin: auto;
+
+      &:after {
+        content: " ";
+        background-color: #008ed6;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 45%;
+        height: 100%;
+      }
+
+      &:before {
+        content: " ";
+        background-color: #008ed6;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 45%;
+        height: 100%;
+      }
+    }
+  }
+  .contactBox{
+    display: flex;
+    flex-direction: column;
+    transition: 0.4s linear;
+    &:hover{
+      i{
+        transform: translateY(10px);
+      }
+    }
+    i{
+      color: #008ed6;
+      font-size: 32px;
+      text-align: center;
+      margin-bottom: 30px;
+      transition: 0.4s linear;
+    }
+    span{
+      color: #999999;
+      font-family: $sspReglr;
+      text-align: center;
+    }
+  }
+  .contactForm{
+    background-color: #15141A;
+    padding: 60px 60px 40px;
+    transform: translateY(150px);
+    form{
+      .form-group{
+        .form-control{
+          background-color: #fff0;
+          border: 1px solid #808080a3;
+          padding: 22px 20px;
+          resize: none;
+          font-family: $sspBld;
+
+          &::placeholder{
+            text-transform: uppercase;
+          }
+        }
+      }
+      textarea{
+        margin-bottom: 21px;
+      }
+      .btn-primary{
+        padding: 18px 35px;
+        text-transform: uppercase;
+        font-family: $sspBld;
+      }
+    }
+  }
+}
+
+.contactMap{
+  .iframeBox iframe{
+    width: 100%;
+    height: 360px;
+  }
+}
+
+
+footer{
+  padding: 60px 0;
+  background-color: #15141A;
+  .socialsList{
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    justify-content: center;
+    li{
+      a i{
+        margin-right: 30px;
+        font-size: 30px;
+        color:#444348;
+        transition: 0.3s linear;
+        &:hover{
+          color: #008ed6;
+        }
+      }
+    }
+  }
+  span{
+    text-transform: uppercase;
+    color:#444348;
+    text-align: center;
   }
 }
