--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,9 @@
   transform: translateY(0px);
   opacity: 1; }
 
+html {
+  scroll-behavior: smooth; }
+
 * {
   margin: 0;
   padding: 0; }
@@ -42,11 +45,12 @@
       border: 1px solid #008ed6; }
 
 header {
-  background-image: url("../images/headerBg.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  padding: 20px 0 0; }
+  position: fixed;
+  width: 100%; }
+  header.sticky {
+    position: fixed;
+    background: #16151b;
+    z-index: 10; }
   header .navbar {
     align-items: baseline;
     background-color: transparent !important; }
@@ -106,6 +110,12 @@ header {
     color: #999;
     font-size: 18px;
     margin-bottom: 63px; }
+
+.underHeaderSect {
+  background-image: url("../images/headerBg.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; }
 
 .prodOverv {
   background-color: #ffffff;
